--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
   "private": true,
   "homepage": "http://bhassan6621.github.io/react-gh-skeleton",
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "add": "^2.0.6",
     "bootstrap": "4.6.0",
     "jquery": "^3.5.1",
+    "or": "^0.2.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "1.4.3",
     "react-dom": "^17.0.1",
-    "react-icons": "4.1.0",
+    "react-flippy": "^0.1.5",
+    "react-icons": "^4.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
